Fix dark mode background color for cards and inputs

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,3 +3,7 @@
 .session-card {
   min-height: 400px;
 }
+
+.dark-mode .session-card {
+  background-color: $card-background-dark !important;
+}
